--- a/docs/src/theme.css
+++ b/docs/src/theme.css
@@ -1,7 +1,5 @@
 /* Theme tunning: for full list ov variables visit the https://alexxnb.github.io/svelte-docs/theming */
 
-:root{
-
-    --somevar: #ff3e00;
-    
+:root {
+  --hl-keyword: #3ca7b9;
 }
