--- a/templates/blank/public/index.html
+++ b/templates/blank/public/index.html
@@ -7,6 +7,7 @@
     <title>Phaser Game</title>
 
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
     <script defer src="/build/bundle.js"></script>
